# highlane

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  config.pkl  fly.toml
migrations/20260426220225_create_copy_tables/: down.sql  up.sql
migrations/20260426232620_rename_base_amount_to_size/: down.sql  up.sql
migrations/20260427090735_signals_allow_slot_recycle/: down.sql  up.sql
migrations/20260427101500_trades_signal_id_unique/: down.sql  up.sql
migrations/20260427101800_drop_redundant_signals_trader_idx/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs  schema.rs
src/db/: mod.rs  models.rs  pool.rs  signals.rs  symbols.rs  traders.rs  trades.rs
src/shared/: intent.rs  mod.rs  observability.rs
src/shared/dex/: mod.rs
src/shared/dex/avantis/: contracts.rs  format.rs  mod.rs  pairs.rs  watcher.rs
src/shared/dex/lighter/: client.rs  executor.rs  markets.rs  mod.rs  signer.rs  state.rs
src/shared/notify/: discord.rs  mod.rs
tools/: fetch_lighter_signer.sh
