[package]
name = "highlane"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "2.0.1", features = ["full"] }
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
