[package]
name = "highlane"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "2.0.1", features = ["full"] }
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
libloading = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hex = "0.4"
diesel = { version = "2.3.8", features = ["postgres", "chrono", "64-column-tables"] }
diesel-async = { version = "0.7", features = ["postgres", "bb8"] }
diesel_migrations = { version = "2.3", features = ["postgres"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
bb8 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
webpki-roots = "0.26"
axiom-rs = "0.11"
